architecture restructure
