# backend/internal/api/comment_handler.go
@@ -10,21 +10,24 @@ import (
 
 	"y_net/internal/auth"
 	"y_net/internal/logger"
-	"y_net/internal/models/comments"
-	"y_net/internal/models/posts"
+	"y_net/internal/services/comments"
 )
 
-type CommentsResource struct{}
+type CommentHandler struct {
+	Usecase comments.CommentUsecaseI
+}
 
-func (rs CommentsResource) Routes() chi.Router {
+func (h CommentHandler) Routes() chi.Router {
 	r := chi.NewRouter()
 
-	r.Post("/", rs.CreateComment)               // POST /api/v1/comments - Create a new comment
-	r.Get("/{post_id}", rs.GetCommentsFromPost) // GET /api/v1/comments/{post_id} - Read a list of comments by: post_id
+	r.Post("/", h.CreateComment)               // POST /api/v1/comments - Create a new comment
+	r.Get("/{post_id}", h.GetCommentsFromPost) // GET /api/v1/comments/{post_id} - Read a list of comments by: post_id
+	r.Post("/like/{id}", h.LikeComment)        // POST /api/v1/comments/like/{id} - Like a single comment by: id
+	r.Post("/unlike/{id}", h.UnlikeComment)    // POST /api/v1/comments/unlike/{id} - Unlike a single comment by: id
 
 	r.Route("/{id}", func(r chi.Router) {
-		r.Post("/", rs.UpdateComment)   // POST /api/v1/comments/{id} - Update a single comment by: id
-		r.Delete("/", rs.DeleteComment) // DELETE /api/v1/comments/{id} - Delete a single comment by: id
+		r.Post("/", h.UpdateComment)   // POST /api/v1/comments/{id} - Update a single comment by: id
+		r.Delete("/", h.DeleteComment) // DELETE /api/v1/comments/{id} - Delete a single comment by: id
 	})
 
 	return r
@@ -44,7 +47,7 @@ func (rs CommentsResource) Routes() chi.Router {
 // @Failure      403
 // @Failure      500
 // @Router       /comments [post]
-func (rs CommentsResource) CreateComment(w http.ResponseWriter, r *http.Request) {
+func (h CommentHandler) CreateComment(w http.ResponseWriter, r *http.Request) {
 	logger.ServerLogger.Info(fmt.Sprintf("new request: post %s", r.URL))
 
 	authUser := auth.ForContext(r.Context())
@@ -75,7 +78,7 @@ func (rs CommentsResource) CreateComment(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	id, err := comment.Create()
+	id, err := h.Usecase.Create(comment)
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
@@ -107,7 +110,7 @@ func (rs CommentsResource) CreateComment(w http.ResponseWriter, r *http.Request)
 // @Failure            401
 // @Failure            500
 // @Router             /comments/{post_id} [get]
-func (rs CommentsResource) GetCommentsFromPost(w http.ResponseWriter, r *http.Request) {
+func (h CommentHandler) GetCommentsFromPost(w http.ResponseWriter, r *http.Request) {
 	logger.ServerLogger.Info(fmt.Sprintf("new request: get %s", r.URL))
 
 	authUser := auth.ForContext(r.Context())
@@ -129,7 +132,7 @@ func (rs CommentsResource) GetCommentsFromPost(w http.ResponseWriter, r *http.Re
 		return
 	}
 
-	comments, err := comments.GetFromPost(postId)
+	comments, err := h.Usecase.GetFromPost(postId)
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
@@ -164,7 +167,7 @@ func (rs CommentsResource) GetCommentsFromPost(w http.ResponseWriter, r *http.Re
 // @Failure      403
 // @Failure      500
 // @Router       /comments/{id} [post]
-func (rs CommentsResource) UpdateComment(w http.ResponseWriter, r *http.Request) {
+func (h CommentHandler) UpdateComment(w http.ResponseWriter, r *http.Request) {
 	logger.ServerLogger.Info(fmt.Sprintf("new request: post %s", r.URL))
 
 	authUser := auth.ForContext(r.Context())
@@ -206,7 +209,97 @@ func (rs CommentsResource) UpdateComment(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	err = comments.Update(comment, commentId)
+	err = h.Usecase.Update(comment, commentId)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// LikeComment   godoc
+// @Summary      Like a single comment by: id
+// @Description  Like a single comment by: id
+// @Tags         comments
+// @Param        Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param        id path string true "Comment ID" Format(uuid)
+// @Success      200
+// @Failure      400
+// @Failure      401
+// @Failure      403
+// @Failure      500
+// @Router       /comments/like/{id} [post]
+func (h CommentHandler) LikeComment(w http.ResponseWriter, r *http.Request) {
+	logger.ServerLogger.Info(fmt.Sprintf("new request: post %s", r.URL))
+
+	authUser := auth.ForContext(r.Context())
+	if authUser == nil {
+		err := fmt.Errorf("access denied")
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	id := chi.URLParam(r, "id")
+	commentId, err := uuid.Parse(id)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid comment id", http.StatusBadRequest)
+		return
+	}
+
+	err = h.Usecase.Like(commentId)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// UnlikeComment godoc
+// @Summary      Unlike a single comment by: id
+// @Description  Unlike a single comment by: id
+// @Tags         comments
+// @Param        Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param        id path string true "Comment ID" Format(uuid)
+// @Success      200
+// @Failure      400
+// @Failure      401
+// @Failure      403
+// @Failure      500
+// @Router       /comments/unlike/{id} [post]
+func (h CommentHandler) UnlikeComment(w http.ResponseWriter, r *http.Request) {
+	logger.ServerLogger.Info(fmt.Sprintf("new request: post %s", r.URL))
+
+	authUser := auth.ForContext(r.Context())
+	if authUser == nil {
+		err := fmt.Errorf("access denied")
+
+		logger.ServerLogger.Warn(err.Error())
+
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	id := chi.URLParam(r, "id")
+	commentId, err := uuid.Parse(id)
+	if err != nil {
+		logger.ServerLogger.Error(err.Error())
+
+		http.Error(w, "invalid comment id", http.StatusBadRequest)
+		return
+	}
+
+	err = h.Usecase.Unlike(commentId)
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
@@ -229,7 +322,7 @@ func (rs CommentsResource) UpdateComment(w http.ResponseWriter, r *http.Request)
 // @Failure      403
 // @Failure      500
 // @Router       /comments/{id} [delete]
-func (rs CommentsResource) DeleteComment(w http.ResponseWriter, r *http.Request) {
+func (h CommentHandler) DeleteComment(w http.ResponseWriter, r *http.Request) {
 	logger.ServerLogger.Info(fmt.Sprintf("new request: delete %s", r.URL))
 
 	authUser := auth.ForContext(r.Context())
@@ -251,7 +344,7 @@ func (rs CommentsResource) DeleteComment(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	comment, err := comments.Get(commentId)
+	comment, err := h.Usecase.Get(commentId)
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
@@ -259,15 +352,7 @@ func (rs CommentsResource) DeleteComment(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	post, err := posts.GetPost(comment.PostID)
-	if err != nil {
-		logger.ServerLogger.Error(err.Error())
-
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-
-	if authUser.ID != comment.UserID || authUser.ID != post.UserID {
+	if authUser.ID != comment.UserID {
 		err := fmt.Errorf("forbidden comment delete attempt from user: %v", authUser.ID)
 
 		logger.ServerLogger.Warn(err.Error())
@@ -276,7 +361,7 @@ func (rs CommentsResource) DeleteComment(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	err = comments.Delete(commentId)
+	err = h.Usecase.Delete(commentId)
 	if err != nil {
 		logger.ServerLogger.Error(err.Error())
 
